--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.1.1
   shared_preferences: ^2.2.2
   provider: ^6.1.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
